--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
@@ -760,4 +760,12 @@ body {
 		min-width: 200px;
 		text-transform:capitalize;
 	}
+	.greenButton{
+		border-radius:12px;
+		border-color: green;
+		background-color: green;
+		border-width: 1px;
+		width: 12px;
+		height: 12px;
+	}
 /* module 16 end */
