--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -3671,4 +3671,9 @@ color: #f1b532;
 }
 .ignoreAcceptedOsceDayPadding{
 	padding-left: 160px
+}.impressionItemListBox{
+	background-color: white !important;
+}
+.impressionItemListBox:hover {
+	background-color: white !important;
 }
