Color Code Changes

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -2467,94 +2467,100 @@ background: rgb(255,255,204)  ;
 background: rgb(201,201,253)  ;
 } */
 
+/*parcour colors*/
 /* Color Shade */
 .accordion-title-selectedcolor_1 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6d4a3', endColorstr='#fdf0dd'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#f6d4a3), to(#fdf0dd)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #f6d4a3, #fdf0dd); /* for firefox 3.6+ */	
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#DB8937', endColorstr='#e9b887'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#DB8937), to(#e9b887)); /* for webkit browsers brown*/
+	background: -moz-linear-gradient(top, #DB8937, #e9b887); /* for firefox 3.6+ brown*/	
 }
 .accordion-title-selectedcolor_2 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeee8c', endColorstr='#fcfcd1'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#eeee8c), to(#fcfcd1)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #eeee8c, #fcfcd1); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfc74', endColorstr='#fdfdab'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fcfc74), to(#fdfdab)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #fcfc74, #fdfdab); /* for firefox 3.6+ yellow*/
 }
 .accordion-title-selectedcolor_3 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fadce7', endColorstr='#f9eaea'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#fadce7), to(#f9eaea)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #fadce7, #f9eaea); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fca9fb', endColorstr='#f9eaea'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fdcbfc), to(#f9eaea)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #fca9fb, #f9eaea); /* for firefox 3.6+ pink */
 }
 .accordion-title-selectedcolor_4 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cfe3d4', endColorstr='#e8f5eb'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#cfe3d4), to(#e8f5eb)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #cfe3d4, #e8f5eb); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a7f4fa', endColorstr='#caf8fc'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#a7f4fa), to(#caf8fc)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #a7f4fa, #caf8fc); /* for firefox 3.6+ aqua*/
 }
 .accordion-title-selectedcolor_5 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d1cee1', endColorstr='#e9e8f4'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#d1cee1), to(#e9e8f4)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #d1cee1, #e9e8f4); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888', endColorstr='#b7b7b7'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#888888), to(#b7b7b7)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #888888, #b7b7b7); /* for firefox 3.6+ grey*/
 }
 .accordion-title-selectedcolor_6 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2cec6', endColorstr='#fcf4f2'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#f2cec6), to(#fcf4f2)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #f2cec6, #fcf4f2); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fc6f6f', endColorstr='#ffe4c4'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fc6f6f), to(#ffe4c4)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #fc6f6f, #ffe4c4); /* for firefox 3.6+ red*/
 }
 .accordion-title-selectedcolor_7 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e5d9c9', endColorstr='#fffbf5'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#e5d9c9), to(#fffbf5)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #e5d9c9, #fffbf5); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe4c4', endColorstr='#ffeedb'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#ffe4c4), to(#ffeedb)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #ffe4c4, #ffeedb); /* for firefox 3.6+ beige*/
 }
 .accordion-title-selectedcolor_8 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c4dbfe', endColorstr='#f3f7fd'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#c4dbfe), to(#f3f7fd)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #c4dbfe, #f3f7fd); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#83a2eb', endColorstr='#b4c7f3'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#83a2eb), to(#b4c7f3)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #83a2eb, #b4c7f3); /* for firefox 3.6+ blue*/
 }
 .accordion-title-selectedcolor_9 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ccccff', endColorstr='#e6e8fd'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#ccccff), to(#e6e8fd)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #ccccff, #e6e8fd); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#54d665', endColorstr='#e6e8fd'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#54d665), to(#e6e8fd)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #54d665, #e6e8fd); /* for firefox 3.6+ green*/
 }
 .accordion-title-selectedcolor_10 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fce0a0', endColorstr='#fcf1d9'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#fce0a0), to(#fcf1d9)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #fce0a0, #fcf1d9); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5c93b', endColorstr='#f9de89'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#f5c93b), to(#f9de89)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #f5c93b, #f9de89); /* for firefox 3.6+ orange*/
 }
 .accordion-title-selectedcolor_11 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c3f4ad', endColorstr='#e6fcdc'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#c3f4ad), to(#e6fcdc)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #c3f4ad, #e6fcdc); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2626', endColorstr='#ff7c7c'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#ff2626), to(#ff7c7c)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #ff2626, #ff7c7c); /* for firefox 3.6+ purpor*/
 }
 .accordion-title-selectedcolor_12 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ccffff', endColorstr='#ebfefe'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#ccffff), to(#ebfefe)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #ccffff, #ebfefe); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa8072', endColorstr='#fcb2aa'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fa8072), to(#fcb2aa)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #fa8072, #fcb2aa); /* for firefox 3.6+ maroon*/
 }
 .accordion-title-selectedcolor_13 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d7d6d6', endColorstr='#f7f7f7'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#d7d6d6), to(#f7f7f7)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #d7d6d6, #f7f7f7); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b8e23', endColorstr='#a6bb7b'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#6b8e23), to(#a6bb7b)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #6b8e23, #a6bb7b); /* for firefox 3.6+ olive */
 }
 .accordion-title-selectedcolor_14 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e1c7fd', endColorstr='#f7f1fe'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#e1c7fd), to(#f7f1fe)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #e1c7fd, #f7f1fe); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8f8bd6', endColorstr='#bbb9e6'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#8f8bd6), to(#bbb9e6)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #8f8bd6, #bbb9e6); /* for firefox 3.6+ violet*/
 }
 .accordion-title-selectedcolor_15 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c1cfcd', endColorstr='#e4e9e8'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#c1cfcd), to(#e4e9e8)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #c1cfcd, #e4e9e8); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4b0082', endColorstr='#9366b4'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#4b0082), to(#9366b4)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #4b0082, #9366b4); /* for firefox 3.6+ indigo*/
 }
 .accordion-title-selectedcolor_16 {
- filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d1d5a0', endColorstr='#f7f8e5'); /* for IE */
-	background: -webkit-gradient(linear, left top, left bottom, from(#d1d5a0), to(#f7f8e5)); /* for webkit browsers */
-	background: -moz-linear-gradient(top, #d1d5a0, #f7f8e5); /* for firefox 3.6+ */
+ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#666666'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#000000), to(#666666)); /* for webkit browsers */
+	background: -moz-linear-gradient(top, #000000, #666666); /* for firefox 3.6+ black*/
+	
 }
+
+/* Color Shade */
+
 .accordion-title-selectedcolor_1:hover, .accordion-title-selectedcolor_2:hover, .accordion-title-selectedcolor_3:hover, .accordion-title-selectedcolor_4:hover, .accordion-title-selectedcolor_5:hover, .accordion-title-selectedcolor_6:hover, .accordion-title-selectedcolor_7:hover, .accordion-title-selectedcolor_8:hover, .accordion-title-selectedcolor_9:hover, .accordion-title-selectedcolor_10:hover, .accordion-title-selectedcolor_11:hover, .accordion-title-selectedcolor_12:hover, .accordion-title-selectedcolor_13:hover, .accordion-title-selectedcolor_14:hover, .accordion-title-selectedcolor_15:hover, .accordion-title-selectedcolor_16:hover {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c1c1c1', endColorstr='#ededed'); /* for IE */
 	background: -webkit-gradient(linear, left top, left bottom, from(#c1c1c1), to(#ededed)); /* for webkit browsers */
 	background: -moz-linear-gradient(top, #c1c1c1, #ededed); /* for firefox 3.6+ */
 }
 
-/* Color Shade */
+
+
 
 .cource-color-red{
 	background: red;
