--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -3442,12 +3442,12 @@ color: #f1b532;
 /* eosce */
 .eOSCElable
 {
-	padding-top: 6px;
-	width: 390px;
+	/* padding-top: 6px; */
+	width: 340px;
 }
 .eOSCEHorizontalPanel
 {
-	padding-top: 6px;
+	/* padding-top: 6px; */
 }
 .schedulePanelStyle
 {	
@@ -3587,7 +3587,8 @@ color: #f1b532;
 /* Export OSCE Issue Change*/
 .exportAnchor{
 	float: right;
-    margin-top: 5px;
+    /* margin-top: 5px; */
+    margin-left: 8px;
 }
 
 /* Module 16 start */
