IOSCE-2 User can create a new recursive checklist in Role module.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -4013,3 +4013,70 @@ color: #f1b532;
  .oldImage{
  	border:3px #F4E0AB solid;
  }
+ 
+ .checklist-popup-arrow{ 
+	border-bottom: 8px solid #FFFFFF;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    bottom: -8px;
+    height: 0;
+    left: 35px;
+    position: absolute;
+    top: -8px;
+    width: 0;
+}
+.checklist-popup-arrow-border{ 
+	border-bottom: 8px solid #AAAAAA;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    bottom: -8px;
+    height: 0;
+    left: 33px;
+    position: absolute;
+    top: -8px;
+    width: 0;
+}
+
+.checklist-topic-popup-arrow{ 
+	border-bottom: 8px solid #FFFFFF;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    bottom: -8px;
+    height: 0;
+    right: 5px;
+    position: absolute;
+    top: -8px;
+    width: 0;
+}
+.checklist-topic-popup-arrow-border{ 
+	border-bottom: 8px solid #AAAAAA;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    bottom: -8px;
+    height: 0;
+    right: 3px;
+    position: absolute;
+    top: -8px;
+    width: 0;
+}
+
+.checklist-edit-popup-arrow{ 
+	position:absolute; 
+	bottom:-8px; 
+	right:5px;
+    width: 0; 
+    height: 0; 
+    border-left:8px solid transparent; 
+    border-right: 8px solid transparent; 
+    border-top: 8px solid #fff;
+ }
+.checklist-edit-popup-arrow-border{ 
+	position:absolute; 
+	bottom:-8px; 
+	right:3px;
+    width: 0; 
+    height: 0; 
+    border-left:10px solid transparent; 
+    border-right: 10px solid transparent; 
+    border-top: 8px solid #AAAAAA;
+}
