IOSCE-149, IOSCE-183, IOSCE-201 Bug fix.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -4080,3 +4080,11 @@ color: #f1b532;
     border-right: 10px solid transparent; 
     border-top: 8px solid #AAAAAA;
 }
+.qr_popup_close_button{
+	float: right;
+	background: none;
+	border: none;
+}
+.qr_popup_close_button:HOVER {
+	background: none;
+}
