IOSCE-368 Changed plain password text to hidden.

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -571,9 +571,9 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-PasswordTextBox {
-	padding: 2px;
-	border: 1px solid #212121;
-	border-radius: 2px;
+	padding: 0 2px;
+	border: 1px solid #AAAAAA;
+	border-radius: 4px;
 	
 	font-size: 90%;
 }
